Create a new branch, Generate OTP and send by email , User registation using otp verification, user login

--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ ENVIRONMENT=TEST
 DOWNLOAD_REQUEST_LIMIT=5
 UPLOAD_REQUEST_LIMIT=3
 REQUEST_EXPIRED_IN_HOURS=12
+
+EMAIL=mdr585643@gmail.com
+PASSWORD=iowwrpfbnhryrgsx
+
+KEY=bsjbfj63safnisndfisdfjn645345
