--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node ./src/srver.js",
-    "dev":"nodemon ./src/srver.js"
+    "dev": "nodemon ./src/srver.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -19,6 +20,8 @@
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
-    "nodemon": "^2.0.19"
+    "nodemailer": "^6.7.8",
+    "nodemon": "^2.0.19",
+    "otp-generator": "^4.0.0"
   }
 }
