delete env file

--- a/example.env
+++ b/example.env
@@ -3,11 +3,7 @@ FOLDER=uploads
 DB_URI=mongodb://localhost:27017/api
 TEST_DB_URI=mongodb://localhost:27017/test
 ENVIRONMENT=TEST
-DOWNLOAD_REQUEST_LIMIT=5
-UPLOAD_REQUEST_LIMIT=3
-REQUEST_EXPIRED_IN_HOURS=12
 
-EMAIL=mdr585643@gmail.com
-PASSWORD=iowwrpfbnhryrgsx
-
+EMAIL=
+PASSWORD=
 KEY=bsjbfj63safnisndfisdfjn645345
